# adafmt

./: .gitignore  ADAFMT_KNOWLEDGE_TRANSFER.md  CHANGELOG.md  CLAUDE.md  COMMIT_TEMPLATE.txt  CONVERSATION_ARCHIVE_2025_01_22.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  abohlib-formatting-report.md  adafmt.spec  adafmt_comment_patterns_v2.json  adafmt_format_rules.json  adafmt_patterns.1.json  adafmt_patterns_updated.json  gnat-comment-style-rules.md  improved_comment_patterns.json  pattern-update-summary.md  pyproject.toml  pyproject2222.toml  pytest.ini  requirements-dev.txt  test_comment_patterns.adb  test_comment_regex.py  test_comment_rules.adb  test_gnat_compliance.adb  test_improved_patterns.adb
.github/workflows/: release.org.yml  release.yml
benchmark_results/session_2025-09-19T21-58-00/: worker_scaling_als_only.json  worker_scaling_als_only.md  worker_scaling_als_patterns.json  worker_scaling_als_patterns.md  worker_scaling_patterns_only.json  worker_scaling_patterns_only.md
benchmark_results/session_2025-09-19T22-11-18/: file_size_impact.json  file_size_impact.md  mode_comparison.json  mode_comparison.md  worker_scaling_als_only.json  worker_scaling_als_only.md  worker_scaling_als_patterns.json  worker_scaling_als_patterns.md  worker_scaling_patterns_only.json  worker_scaling_patterns_only.md
docs/: ALS_FORMATTING_HOLES_MATRIX.md  GPT5_ALS_HOLES_COMPARISON.md  GPT5_DECORATOR_PATTERN_HELP.md  PARSER_PATTERN_IMPLEMENTATION_MATRIX.md  index.md  modern-architecture-design.md  multi-command-architecture.md  parser-integration-guide.md  parser-sdd.md  parser-srs.md  parser-test-guide.md
docs/ada/AA-22-Html/: AA-0-1.html  AA-0-2.html  AA-0-3.html  AA-0-4.html  AA-1-1-1.html  AA-1-1-2.html  AA-1-1-3.html  AA-1-1-4.html  AA-1-1-5.html  AA-1-1.html  AA-1-2-1.html  AA-1-2.html  AA-1-3-1.html  AA-1-3-2.html  AA-1-3-3.html  AA-1-3-4.html  AA-1-3-5.html  AA-1-3.html  AA-1.html  AA-10-1-1.html  AA-10-1-2.html  AA-10-1-3.html  AA-10-1-4.html  AA-10-1-5.html  AA-10-1-6.html  AA-10-1.html  AA-10-2-1.html  AA-10-2.html  AA-10.html  AA-11-1.html  AA-11-2.html  AA-11-3.html  AA-11-4-1.html  AA-11-4-2.html  AA-11-4-3.html  (+480 more)
docs/api/: als_client.md  cli.md  edits.md  file_discovery.md  index.md  logging_jsonl.md  tui.md
docs/developer/: contributing.md  debugging.md  getting-started.md  index.md  overview.md  testing.md
docs/diagrams/: command-architecture-dip.puml  dip-architecture-overview.md  pipeline-architecture-dip.puml  service-container-dip.puml  system-overview-dip.puml
docs/formal/: SDD.md  SRS.md  index.md
docs/guides/: RELEASE_CHECKLIST.md  als-initialization-guide.md  command-line-guide.md  comment-pattern-changes.md  configuration-guide.md  contributing-guide.md  debug-logging-guide.md  getting-started-guide.md  index.md  output-format-guide.md  parallel-processing-guide.md  patterns-guide.md  terminal-colors-guide.md  testing-guide.md  timeout-guide.md  troubleshooting-guide.md
docs/patterns/: sdd_patterns_v3.md  srs_patterns_v3.md
docs/reference/: index.md  traces-config.md
docs/user/: configuration.md  getting-started.md  index.md  timeout-guide.md  troubleshooting.md
scripts/: check_no_shell_true.py  kill_als.py  update_doc_headers.org.py  update_doc_headers.py
src/adafmt/: __init__.py  __main__.py  adafmt_format_rules.json  als_client.py  als_initializer.py  argument_validator.py  ast_visitors.py  async_file_io.py  cleanup_handler.py  cli.py  cli_helpers.py  cli_new.py  cli_old.py  comment_spacing_visitor.py  comment_visitors.py  default_paths.py  edits.py  error_writer.py  errors.py  file_discovery.py  file_discovery_new.py  file_ops.py  file_processor.py  final_reporter.py  formatting_rules_model.py  formatting_visitor.py  gnat_validator.py  initializer.py  line_formatting_visitors.py  logging_jsonl.py  logging_setup.py  metrics.py  metrics_reporter.py  operator_spacing_visitor.py  parser_pattern_processor.py  parser_wrapper.py  path_validator.py  pattern_formatter.py  pattern_loader.py  pattern_validator.py  (+12 more)
src/adatool/: core.py
tests/: README.md  __init__.py  conftest.py  test_comment_patterns.py  test_parser_wrapper.py  test_utils.py
tests/integration/: __init__.py  test_adafmt_integration.py  test_assignment_spacing.py  test_binary_operators_spacing.py  test_cli_integration.py  test_comment_spacing.py  test_gnat_validation.py  test_line_formatting.py  test_metrics_consistency.py  test_parameter_association_spacing.py  test_pattern_integration.py  test_pattern_timeout_integration.py  test_range_operator_spacing.py  test_timeout_context_integration.py  test_type_declaration_spacing.py  test_validate_patterns_integration.py  test_worker_pool_integration.py
tests/parser/: test.gpr  test_als_line_length.adb  test_als_string_corruption.py  test_assignment_ast_visitor.py  test_assignment_rule.py  test_assignment_simple.adb  test_assignment_spacing.adb  test_line_length.adb  test_line_length_handling.py  test_long_string_literals.py  test_parser_assign_advanced.py  test_parser_assign_pattern.py  test_parser_formatting.py  test_parser_patterns.py  test_parser_post_als.py  test_parser_simple_demo.py  test_regex_string_corruption.py  test_string_literal_safety.py  test_two_pass_concept.py  test_two_pass_string_formatting.py  test_with_als_formatting.py
tests/patterns/: README.md  conftest.py  test_patterns.json  test_utils.py  test_utils_fixed.py  test_utils_orig.py
tests/unit/: __init__.py  test_als_client.py  test_async_file_io.py  test_async_io_performance.py  test_cli.py  test_edits.py  test_file_discovery.py  test_file_ops.py  test_file_processor_parallel.py  test_file_size_limit.py  test_hook_security.py  test_logging_jsonl.py  test_lsp_header_parsing.py  test_metrics.py  test_path_validator.py  test_pattern_formatter.py  test_pattern_formatter_additional.py  test_pattern_formatter_coverage.py  test_retry_handler.py  test_thread_safe_metrics.py  test_worker_context.py  test_worker_pool.py
tests_patterns_temp/tests/: test_patterns.json
tools/: README.md  als_rpc_probe.py  als_rpc_probe_stdio.py  harness_mocked.py
(+26 files in other folders)
