[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "adafmt"
version = "0.0.0"
description = "Ada Language Formatter (ALS-backed, Customizable)"
authors = [
  { name = "Michael Gardner, A Bit of Help, Inc." }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "typer>=0.9.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/abitofhelp/adafmt"
Source = "https://github.com/abitofhelp/adafmt"
Changelog = "https://github.com/abitofhelp/adafmt/releases"
Issues = "https://github.com/abitofhelp/adafmt/issues"

[project.scripts]
adafmt = "adafmt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "mypy",
    "ruff",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
]
patterns = [
    "regex>=2022.0.0",  # For cross-platform timeout support in pattern processing
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adafmt = ["LICENSE"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python3 -m build"
tag_format = "v{version}"
commit_message = "{version}\n"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_pypi = true
upload_to_vcs_release = true

[tool.semantic_release.remote]
name = "origin"
type = "github"

