[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "adafmt"
version = "0.0.0"  # bumped by python-semantic-release
description = "Ada Language Formatter (ALS-backed, Customizable)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Michael Gardner, A Bit of Help, Inc." }]
keywords = ["ada", "formatter", "lsp", "als", "cli"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.9.0",
  "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/abitofhelp/adafmt"
Source   = "https://github.com/abitofhelp/adafmt"
Changelog = "https://github.com/abitofhelp/adafmt/releases"
Issues   = "https://github.com/abitofhelp/adafmt/issues"

[project.scripts]
adafmt = "adafmt.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-asyncio",
  "black",
  "mypy",
  "ruff",
]
test = [
  "pytest>=7.0",
  "pytest-asyncio",
]
patterns = [
  "regex>=2022.0.0",  # For cross-platform timeout support in pattern processing
]

[tool.setuptools]
include-package-data = true

# src/ layout discovery
[tool.setuptools.packages.find]
where = ["src"]
include = ["adafmt*"]

# optional: include extra non-Python files from the package
[tool.setuptools.package-data]
adafmt = ["LICENSE"]

# -----------------------------
# Python Semantic Release (PSR)
# -----------------------------
[tool.semantic_release]
# Where to write the version back
version_toml = ["pyproject.toml:project.version"]

# Branches: release only from main
branch = "main"

# Tag format you’re using
tag_format = "v{version}"

# Build wheels/sdist
build_command = "python -m build"

# Keep release commit message simple
commit_message = "{version}\n"

# --- New/adjusted bits below ---

# Use the default Angular commit parser explicitly
[tool.semantic_release.commit_parser]
parser = "angular"

[tool.semantic_release.commit_parser_options]
# Keep it simple: we’ll accept standard types; major comes from BREAKING CHANGE or "!".
allowed_tags = ["feat","fix","perf","docs","style","refactor","test","build","ci","chore"]
minor_tags   = ["feat"]
patch_tags   = ["fix","perf"]

# Modern changelog config location (v10)
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

# Enable both PyPI and GitHub release upload
[tool.semantic_release.publish]
upload_to_pypi = true
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

# Remote (GitHub) — defaults are fine, but this is explicit
[tool.semantic_release.remote]
name = "origin"
type = "github"
